[package]
name = "cita-executor"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
clap = "2"
serde = "1.0"
crossbeam-channel = "0.2"
serde_json = "1.0"
serde_derive = "1.0"
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
cita-directories = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
error =  { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
core-executor = { path = "./core" }
common-types = { path = "../cita-chain/types" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
evm = { path = "evm" }
db = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }

[dev-dependencies]
bincode = "0.8.0"
cita-ed25519 = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
tempdir = "0.3.7"

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
privatetx = ["core-executor/privatetx"]
evm-debug = ["core-executor/evm-debug"]
evm-debug-tests = ["evm-debug", "core-executor/evm-debug-tests"]
