[package]
name = "evm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
lazy_static = "0.2"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
bit-set = "0.4"
common-types = { path = "../../cita-chain/types" }
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }
rustc-hex = "1.0"
db = { git = "https://github.com/cryptape/cita-common.git", branch = "sodiumoxide" }

[features]
evm-debug = []
evm-debug-tests = ["evm-debug"]
